[gd_scene load_steps=2 format=3 uid="uid://vc127s8rr1bl"]

[ext_resource type="Script" path="res://scripts/input_rebinding.gd" id="1_koyeu"]

[node name="InputRebinding" type="CanvasLayer"]
script = ExtResource("1_koyeu")

[node name="Tint" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Remap Keyboard Controls"
horizontal_alignment = 1

[node name="InputButtonLeft" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/InputButtonLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Left"

[node name="Button" type="Button" parent="MarginContainer/Panel/VBoxContainer/InputButtonLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Left Arrow"

[node name="InputButtonRight" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/InputButtonRight"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Right"

[node name="Button" type="Button" parent="MarginContainer/Panel/VBoxContainer/InputButtonRight"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Left Arrow"

[node name="InputButtonDown" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/InputButtonDown"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Down"

[node name="Button" type="Button" parent="MarginContainer/Panel/VBoxContainer/InputButtonDown"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Left Arrow"

[node name="InputButtonUp" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/InputButtonUp"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Up"

[node name="Button" type="Button" parent="MarginContainer/Panel/VBoxContainer/InputButtonUp"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Left Arrow"

[node name="InputButtonJump" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/InputButtonJump"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Jump"

[node name="Button" type="Button" parent="MarginContainer/Panel/VBoxContainer/InputButtonJump"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Left Arrow"

[node name="InputButtonShoot" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/InputButtonShoot"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Shoot"

[node name="Button" type="Button" parent="MarginContainer/Panel/VBoxContainer/InputButtonShoot"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Left Arrow"

[node name="InputButtonRestart" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/InputButtonRestart"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Respawn"

[node name="Button" type="Button" parent="MarginContainer/Panel/VBoxContainer/InputButtonRestart"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="ResetInputs" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Reset to Defaults"

[node name="Done" type="Button" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Done"

[node name="WaitingPanel" type="Panel" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="WaitingPanelLabel" type="Label" parent="MarginContainer/WaitingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Press key for 'jump'"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/ResetInputs" to="." method="_on_reset_inputs_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/Done" to="." method="close"]
